Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [DEV-465] added messaging system (Aly)
 - [ZBX-2697] forbid creation of maintenance without hosts\groups (Vedmak)
 - [ZBX-2711] added links to host profile in dashboard "last 20 issues" host menu (Vedmak)
 - [ZBX-2719] fixed events delay for one minute in frontend (Vedmak)
 - [ZBX-2720] in actions conditions trigger host is now displayed (Vedmak)
 - [ZBX-2685] fixed map elements not always change position when coords are manually set (Vedmak)
 - [ZBX-2664] fixed viewed period and filter status reset in web monitoring (Vedmak)
 - [ZBX-2683] removed dead entries and added some translated strings for the Latvian translation (Richlv)
 - [ZBX-2682] added Czech translation; thanks to Jakub Kalas (Richlv)
 - [ZBX-2669] fixed not showing map label when background image is used (Vedmak)
 - [ZBXNEXT-436] added unacknwledged problem display for maps (Vedmak)
 - [ZBX-2561] refactored usergroups api, improved items deletion (Vedmak)
 - [ZBX-2634] fixed instability of Zabbix processes on Solaris due to them crashing in signal handlers (asaveljevs)
 - [ZBX-2670] make it clear in the 'configure' help output that full path to odbc_config should be specified (Richlv)
 - [ZBX-2666] fixed detection of resolv.h and net/if.h (asaveljevs)
 - [ZBX-2657] fixed bugs with non closing item select popups in bar reports (Vedmak)
 - [ZBXNEXT-425] added new macros for acknowledged events count (Vedmak)
 - [ZBX-2642] fixed items multiplier field (Vedmak)
 - [ZBX-2639] now when do full clone template, linkage list is cleared (Vedmak)
 - [ZBX-2598] fixed labels with linebreak in maps (Aly)
 - [ZBXNEXT-426] added dashboard option to show unack problems (Vedmak)